--- a/menu.html
+++ b/menu.html
@@ -19,15 +19,8 @@
 
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
-        <link href="css/tooplate-crispy-kitchen.css" rel="stylesheet">
+        <link href="css/tooplate.css" rel="stylesheet">
         
-<!--
-
-Tooplate 2129 Crispy Kitchen
-
-https://www.tooplate.com/view/2129-crispy-kitchen
-
--->
     </head>
     
     <body>
