--- a/news-detail.html
+++ b/news-detail.html
@@ -19,14 +19,7 @@
 
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
-        <link href="css/tooplate-crispy-kitchen.css" rel="stylesheet">
-<!--
-
-Tooplate 2129 Crispy Kitchen
-
-https://www.tooplate.com/view/2129-crispy-kitchen
-
--->
+        <link href="css/tooplate.css" rel="stylesheet">
     </head>
     
     <body>
