--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,8 @@
 
         <title>MAYA TUXPAKAL</title>
 
-        <!-- CSS FILES -->        
+        <!-- CSS FILES -->   
+        <link rel="shortcut icon" href="MT.ico"/>     
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">                
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
+        <link href="icon" href="MT.ico">
 
         <link href="css/tooplate.css" rel="stylesheet">
 
@@ -31,6 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
+                <img class="icon-logo" src="MT_ICONO.jpg" alt="icono de Maya Tuxpakal"/>
                 <a class="navbar-brand" href="index.html">
                     MAYA TUXPAKAL
                 </a>
@@ -46,19 +48,19 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="quienes_Somos.html">Quiénes Somos</a>
+                            <a class="nav-link" href="Quienes_Somos.html">Quiénes Somos</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="menu.html">Productos</a>
+                            <a class="nav-link" href="productos.html">Productos</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="news.html">Eventos</a>
+                            <a class="nav-link" href="eventos.html">Eventos</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link active" href="contacto.html">Contactar</a>
+                        <li class="nav-item" >
+                            <a class="nav-link active" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -93,7 +95,7 @@
                     <div class="row">
 
                         <div class="col-12">
-                            <h2 class="mb-4">Contactar</h2>
+                            <h2 class="mb-4 text-center">Contactar</h2>
                         </div>
 
                         <div class="col-lg-6 col-12">
@@ -126,32 +128,10 @@
                             </form>
                         </div>
 
-                        <div class="col-lg-4 col-12 mx-auto mt-lg-5 mt-4">
-
-                            <h5>Entre Semana</h5>
-
-                            <div class="d-flex mb-lg-3">
-                                <p>Lun - Vier </p>
-
-                                <p class="ms-5">10:00 AM - 08:00 PM</p>
-                            </div>
-
-                            <h5>Fines de Semana</h5>
-
-                            <div class="d-flex">
-                                <p>Sab - Dom</p>
-
-                                <p class="ms-5">11:00 AM - 11:00 PM</p>
-                            </div>
-                        </div>
-
-                        <!--<div class="col-12">
-                            <h4 class="mt-5 mb-4">6a Norte Poniente #143, Tuxtla Gutiérrez, Chiapas</h4>
-
-                            <div class="google-map pt-3">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14920.891757756479!2d-73.83496372506556!3d40.8623107607295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c28cbc17f4a0c3%3A0x9ae0f1e804a817d!2s121%20Einstein%20Loop%20N%2C%20Bronx%2C%20NY%2010475%2C%20USA!5e0!3m2!1sen!2sth!4v1650470337727!5m2!1sen!2sth" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                            </div>
-                        </div>-->
+                        <div class="col-lg-4 col-12 mx-auto mt-lg-9 mt-4">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15281.424757713505!2d-93.1239776302246!3d16.758945400000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ecd88d8014a4f3%3A0xa1fa68dba5bf60f1!2s6a%20Avenida%20Nte.%20Pte.%20%26%20Av.%20Sexta%20Nte.%20Pte.%2C%20Zona%20Sin%20Asignaci%C3%B3n%20de%20Nombre%20de%20Col%2042%2C%20Tuxtla%20Guti%C3%A9rrez%2C%20Chis.!5e0!3m2!1ses-419!2smx!4v1677377823079!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <div class="map-responsive">                                
+                        </div>                       
 
                     </div>
                 </div>
@@ -174,7 +154,7 @@
 
                         <p>6a Norte Poniente #143, Tuxtla Gutiérrez, Chiapas</p>
 
-                        <a href="https://www.google.com.mx/maps/place/Central+Nte.+%26+Av.+Sexta+Nte.+Pte.,+Zona+Sin+Asignaci%C3%B3n+de+Nombre+de+Col+42,+Tuxtla+Guti%C3%A9rrez,+Chis./@16.7588642,-93.1172508,17.19z/data=!4m6!3m5!1s0x85ecd88d8014a4f3:0xa1fa68dba5bf60f1!8m2!3d16.7589454!4d-93.1152229!16s%2Fg%2F11f37wbzjf?hl=es-419&authuser=0" class="custom-btn btn btn-dark mt-2">Ubicación</a>
+                        <a href="https://www.google.com.mx/maps/place/6a+Avenida+Nte.+Pte.+%26+Av.+Sexta+Nte.+Pte.,+Zona+Sin+Asignaci%C3%B3n+de+Nombre+de+Col+42,+Tuxtla+Guti%C3%A9rrez,+Chis./@16.7590669,-93.115629,3a,75y,189.86h,76.37t/data=!3m6!1e1!3m4!1swFbXFQnNcPNxZVHO_hhPYg!2e0!7i16384!8i8192!4m6!3m5!1s0x85ecd88d8014a4f3:0xa1fa68dba5bf60f1!8m2!3d16.7589454!4d-93.1152229!16s%2Fg%2F11f37wbzjf?hl=es-419&authuser=0" class="custom-btn btn btn-dark mt-2">Ubicación</a>
                     </div>
 
                     <div class="col-lg-4 col-md-5 col-xs-12 tooplate-mt30">
