--- a/detalles.html
+++ b/detalles.html
@@ -9,7 +9,8 @@
 
         <title>MAYA TUXPAKAL</title>
 
-        <!-- CSS FILES -->  
+        <!-- CSS FILES -->
+        <link rel="shortcut icon" href="MT.ico"/>  
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,6 +31,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
+                <img class="icon-logo" src="MT_ICONO.jpg" alt="icono de Maya Tuxpakal"/>
                 <a class="navbar-brand" href="index.html">
                     MAYA TUXPAKAL
                 </a>
@@ -41,23 +43,23 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link active" href="index.html">Inicio</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">Story</a>
+                            <a class="nav-link" href="Quienes_Somos.html">Quiénes Somos</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="menu.html">Menu</a>
+                            <a class="nav-link" href="productos.html">Productos</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="news.html">Our Updates</a>
+                            <a class="nav-link" href="eventos.html">Eventos</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
